TASK: Make urlSchemaAndHost configurable

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -4,3 +4,7 @@ Neos:
       targets:
         localWebDirectoryPersistentResourcesTarget:
           target: 'PunktDe\OutOfBandRendering\ResourceManagement\CommandRequestAwareFileSystemSymlinkTarget'
+
+PunktDe:
+  OutOfBandRendering:
+    urlSchemaAndHost: 'https://urlSchemaAndHost'
