--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-    "description": "",
+    "description": "Render a node using a given prototype path",
     "type": "neos-package",
     "name": "punktde/outofbandrendering",
+    "license": "MIT",
     "require": {
-        "neos/flow": "*",
-        "neos/neos": "*",
-        "neos/eel": "*"
+        "neos/neos": "*"
     },
     "autoload": {
         "psr-4": {
