--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "name": "punktde/outofbandrendering",
     "license": "MIT",
     "require": {
-        "neos/neos": "*"
+        "neos/neos": ">= 3.3"
     },
     "autoload": {
         "psr-4": {
