--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "name": "punktde/outofbandrendering",
     "license": "MIT",
     "require": {
-        "neos/neos": "> 7.0 < 9.0"
+        "neos/neos": "^9.0"
     },
     "autoload": {
         "psr-4": {
